--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Víctor Collado's Homepage
-page-top-title: Víctor Collado
-top-section-bg-text: Computer Science
-home-subtitle: Víctor Collado&ensp;|&ensp;
-copyright-text: '&copy; Víctor Collado 2023-2025. All Rights Reserved.'
+page-top-title: Víctor Collado Fernández
+top-section-bg-text: Mathematics | Statistics
+home-subtitle: Víctor Collado Fernández
+copyright-text: '&copy; Víctor Collado Fernández 2023-2025. All Rights Reserved.'
